# mt5_adapter

./: README.md  alembic.ini  pyproject.toml  settings.yaml
alembic/: env.py
alembic/versions/: db077cac85f3_create_sources_table.py  db077cac85f3_create_terminals_table.py  fe63fe29ae84_create_instruments_table.py
scripts/install/: fxclub.bat  mtb.bat
terminals/: __init__.py  app.py  config.py  config.yaml  database.py  models.py
terminals/drivers/: __init__.py  driver.py  terminals.py
terminals/drivers/mt5_driver/: __init__.py  mt5_driver.py  mt5_terminal_methods.py
terminals/storage/: __init__.py  models.py  service.py
