[tool.poetry]
name = "terminalr"
version = "0.0.1"
description = "Web adapter for the MT5 trading terminal."
authors = ["Your Name <you@example.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "terminals"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
metatrader5 = "^5.0.44"
loguru = "^0.6.0"
pydantic = "^1.10.7"
dynaconf = "^3.1.12"
alembic = "^1.10.2"
psycopg2 = "^2.9.5"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
